# reactos

base/applications/: CMakeLists.txt
base/applications/fltmc/: CMakeLists.txt
base/applications/mmc_new/: AddRemoveDialog.cpp  AddRemoveDialog.h  AddStandalone.cpp  AddStandalone.h  CMakeLists.txt  ChildFrame.cpp  ChildFrame.h  MainFrame.cpp  MainFrame.h  NodeManager.cpp  NodeManager.h  atlmdi.h  guid.c  main.cpp  mmc.exe.manifest  mmc.rc  notes.md  precomp.h  resource.h
base/applications/mmc_new/notes/: notes.md  versions.md
dll/win32/: CMakeLists.txt
dll/win32/mmcndmgr/: CMakeLists.txt  FolderSnapin.cpp  FolderSnapin.h  Logger.cpp  Logger.h  dllmain.cpp  guid.c  mmcndmgr.rc  mmcndmgr_classes.idl  mmcndmgr_classes.rgs  notes.md  precomp.h  resource.h
sdk/include/psdk/: CMakeLists.txt  mmc.idl
sdk/lib/atl/: atlbase.h  atlwin.h
